--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"bits-ui": "^0.21.10",
 		"chart.js": "^4.4.3",
 		"clsx": "^2.1.1",
+		"lucide-svelte": "^0.383.0",
 		"svelte-chartjs": "^3.1.5",
 		"svelte-radix": "^1.1.0",
 		"tailwind-merge": "^2.3.0",
