--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+	    "tauri": "tauri"
 	},
 	"devDependencies": {
+		"@tauri-apps/api": ">=2.0.0-beta.0",
+    "@tauri-apps/plugin-global-shortcut": "^2.0.0-beta.5",
+    "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
@@ -26,6 +30,8 @@
 	"type": "module",
 	"dependencies": {
 		"@internationalized/date": "^3.5.4",
+		"@tauri-apps/cli": ">=2.0.0-beta.0",
+		"@sveltejs/adapter-static": "^3.0.1",
 		"bits-ui": "^0.21.10",
 		"chart.js": "^4.4.3",
 		"clsx": "^2.1.1",
@@ -33,6 +39,7 @@
 		"svelte-chartjs": "^3.1.5",
 		"svelte-radix": "^1.1.0",
 		"tailwind-merge": "^2.3.0",
+		"tailwind-scrollbar": "^3.1.0",
 		"tailwind-variants": "^0.2.1",
 		"xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz"
 	}
