--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-	    "tauri": "tauri"
+		"tauri": "tauri"
 	},
 	"devDependencies": {
-		"@tauri-apps/api": ">=2.0.0-beta.0",
-    "@tauri-apps/plugin-global-shortcut": "^2.0.0-beta.5",
-    "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tailwindcss/typography": "^0.5.13",
+		"@tauri-apps/api": ">=2.0.0-beta.0",
+		"@tauri-apps/plugin-global-shortcut": "^2.0.0-beta.5",
+		"@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
 		"autoprefixer": "^10.4.19",
 		"postcss": "^8.4.38",
 		"svelte": "^4.2.7",
@@ -30,11 +30,12 @@
 	"type": "module",
 	"dependencies": {
 		"@internationalized/date": "^3.5.4",
-		"@tauri-apps/cli": ">=2.0.0-beta.0",
 		"@sveltejs/adapter-static": "^3.0.1",
+		"@tauri-apps/cli": ">=2.0.0-beta.0",
 		"bits-ui": "^0.21.10",
 		"chart.js": "^4.4.3",
 		"clsx": "^2.1.1",
+		"flat": "^6.0.1",
 		"lucide-svelte": "^0.383.0",
 		"svelte-chartjs": "^3.1.5",
 		"svelte-radix": "^1.1.0",
