--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"tauri": "tauri",
-		"deploy": "npm run build && gh-pages -d build -t true"
+		"deploy": "npm run build && gh-pages -d build -t true",
+		"test": "jest"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
@@ -19,8 +20,10 @@
 		"@tauri-apps/api": ">=2.0.0-beta.0",
 		"@tauri-apps/plugin-global-shortcut": "^2.0.0-beta.5",
 		"@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
+		"@types/jest": "^29.5.12",
 		"autoprefixer": "^10.4.19",
 		"gh-pages": "^6.1.1",
+		"jest": "^29.7.0",
 		"postcss": "^8.4.38",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
